[tool.poetry]
name = "ewx_pws"
version = "0.1.0"
description = "MSU Enviroweather Network Personal Weather Stations"
authors = ["Patrick Bills"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = ">=2.0.0,<2.1.0"
pydantic = "~2.4.2"
alembic = "~1.12.0"
pandas  = "~2.1.0"
psycopg2-binary = "~2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "~6.2.4"
python-dotenv = "^0.21.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
Sphinx = "5.3.0"
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.2.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
